namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: eshop-app
  labels:
    name: eshop-app
