service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eshop-service
  namespace: eshop-app
spec:
  selector:
    name: eshop
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
